tests/errors/sem.arg-overflow.sizeof.or
main :: () -> void {
    sizeof(int, int);
};
